--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.modal {
+  background-color: rgba(0,0,0,0.5);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.KeyBoardButton {
+  width: 100%;
+  border: none;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+.KeyBoardText {
+  border: none;
+  text-align: center;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+.KeyBoardBlock {
+  background: #AFCDE7;
+  color: white;
+  box-shadow: 5px 5px 15px 5px #000000;
+}
