Клавиатура работает. Теперь (самое сложное) надо передавать введённые данные в устройство

--- a/src/components/containers/keyboards/UI/KeyBoards/KeyBoardNumeric/KeyBoardNumeric.css
+++ b/src/components/containers/keyboards/UI/KeyBoards/KeyBoardNumeric/KeyBoardNumeric.css
@@ -16,7 +16,9 @@
     padding: 5px;
   }
 
-  .kbn-header { grid-area: kbn-header; }
+  .kbn-header { 
+    grid-area: kbn-header;
+  }
   
   .kbn-discription { grid-area: kbn-discription; }
   
