делаю правое меню

--- a/src/components/containers/navbar/Navbar.css
+++ b/src/components/containers/navbar/Navbar.css
@@ -1,17 +1,17 @@
-.nav-btn {
-    position: relative;
-    display: inline-block;
-    height: 32px;
-    width: 32px;
+.burger1 {
+    width: 1rem;
+    height: 1rem;
     font-size: 16px;
     cursor: pointer;
     color: black;
     z-index: 100;
     margin-left: auto;
+    order:2;
+    border: 1px solid red;
 }
 
 
-.burger {
+.burger2 {
     position: absolute;
     cursor: pointer;
     width: 1rem;
@@ -19,8 +19,6 @@
     right: 0.25rem;
     top: 0.25rem;
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
     border: 1px solid red;
 }
 
