--- a/src/components/HOC/Modal/Modal.css
+++ b/src/components/HOC/Modal/Modal.css
@@ -6,6 +6,15 @@
     top: 0;
     left: 0;
     display: flex;
+}
+
+.Modal.content-center {
     align-items: center;
     justify-content: center;
+}
+
+.Modal.content-right {
+    align-items: stretch;
+    flex-direction: row;
+    justify-content: flex-end;
 }
