--- a/src/components/containers/navbar/Navbar.css
+++ b/src/components/containers/navbar/Navbar.css
@@ -1,17 +1,4 @@
-.burger1 {
-    width: 1rem;
-    height: 1rem;
-    font-size: 16px;
-    cursor: pointer;
-    color: black;
-    z-index: 100;
-    margin-left: auto;
-    order:2;
-    border: 1px solid red;
-}
-
-
-.burger2 {
+.NavBar {
     position: absolute;
     cursor: pointer;
     width: 1rem;
@@ -19,13 +6,9 @@
     right: 0.25rem;
     top: 0.25rem;
     display: flex;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 
 .NavBar:hover {
     opacity: 0.7;
-}
-
-.NavBar.open {
-    left: 320px;
 }
