--- a/src/components/containers/navbar/Navbar.css
+++ b/src/components/containers/navbar/Navbar.css
@@ -1,12 +1,10 @@
 .NavBar {
     position: absolute;
     cursor: pointer;
-    width: 1rem;
-    height: 1rem;
     right: 0.25rem;
     top: 0.25rem;
     display: flex;
-    /*border: 1px solid red;*/
+    border: 1px solid red;
 }
 
 .NavBar:hover {
