--- a/src/pages/Trands/Trands.css
+++ b/src/pages/Trands/Trands.css
@@ -4,8 +4,8 @@
   align-items: flex-start;
   border: 1px dashed red;
   box-sizing: border-box;
-  width: 100%;
-  height: 100%;
+  /*width: 100%;*/
+  /*height: 100%;*/
 }
 
 .Trands.box {
@@ -24,18 +24,6 @@
   width: 100%;
   height: 100%;
   background: white;
-}
-
-.Trands.btn {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-}
-
-.Trands.h3 {
-  position: absolute;
-  left: 0px;
-  top: 32px;
 }
 
 .Trands.range {
