--- a/src/pages/Trands/Trands.css
+++ b/src/pages/Trands/Trands.css
@@ -4,22 +4,19 @@
   align-items: flex-start;
   border: 1px dashed red;
   box-sizing: border-box;
-  /*width: 100%;*/
-  /*height: 100%;*/
 }
 
 .Trands.box {
-  position: relative;
-  border: 1px dashed blue;
+  border-bottom: 1px dashed gray;
   box-sizing: border-box;
   width: 100%;
+  /*
+  resize: vertical;
+  overflow: auto;
+  */
 }
 
 .Trands.canvas {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  border: 1px dashed green;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
