--- a/src/components/TrandsMenu/buttons/MenuButton.css
+++ b/src/components/TrandsMenu/buttons/MenuButton.css
@@ -1,4 +1,4 @@
-.DBButton {
+.MenuButton {
   height: 1rem;
   font-size: 1rem;
   color: black;
@@ -9,11 +9,12 @@
   margin: 1px;
 }
 
-.DBButton:hover {
+.MenuButton:hover {
   opacity: 1;
   background-color: white;
+  transition: opacity 0.25s ease-in;
 }
 
-.DBButton.open {
+.MenuButton.pressed {
   background-color: white;
 }
