--- a/src/pages/Trands/Legend.css
+++ b/src/pages/Trands/Legend.css
@@ -5,21 +5,24 @@
   width: 30%;
   /*height: 32px;*/
   border: 1px dashed red;
-  box-sizing: border-box;
 }
 
 .Legend.wrapper {
-  position: relative;
   display: flex;
   flex-direction:column;
-  align-items: flex-start;
-  box-sizing: border-box;
   border: 1px dashed green;
-  left:0%;
+  padding: 0px;
+  margin: 0px;
+  height: auto;
 }
 
 .Legend.element {
+  font-size: 1em;
+  box-sizing: border-box;
   border: 1px dashed blue;
+  padding: 0px;
+  margin: 0px;
+  height: auto;
   /*left:-10%;*/
 }
 
