--- a/src/components/Legend/Legend.css
+++ b/src/components/Legend/Legend.css
@@ -1,10 +1,11 @@
 .legend {
+  display: table;/*оборачивает юлок по ширене контента*/
   position: relative;
   top: -100%;
   left: 3px;
-  width: 30%;
-  border: 1px dashed red;
+  /*border: 1px dashed red;*/
   line-height:70%;/*влияет на высоту элемента*/
+  opacity: 0.7;
 }
 
 .legend__item {
