--- a/src/components/Legend/Legend.css
+++ b/src/components/Legend/Legend.css
@@ -6,9 +6,9 @@
   border: 1px dashed red;
   line-height:70%;/*влияет на высоту элемента*/
   color: black;
-  font-weight: bold;
-  -webkit-text-stroke: 1px lightgray;
-  -webkit-text-fill-color: black;
+  font-weight: 600;
+  text-shadow: white 1px 1px 0, white -1px -1px 0, 
+               white -1px 1px 0, white 1px -1px 0;
 }
 
 
