TougleButton теперь фиксируется в плном цвете когда нажата

--- a/src/components/Legend/Legend.css
+++ b/src/components/Legend/Legend.css
@@ -6,9 +6,12 @@
   border: 1px dashed red;
   line-height:70%;/*влияет на высоту элемента*/
   color: black;
-  font-weight: 600;
+  font-weight: bold;
+  font-size: small;
+  /*
   text-shadow: white 1px 1px 0, white -1px -1px 0, 
                white -1px 1px 0, white 1px -1px 0;
+  */
 }
 
 
