--- a/src/components/Legend/Legend.css
+++ b/src/components/Legend/Legend.css
@@ -3,7 +3,7 @@
   position: relative;
   top: -100%;
   left: 3px;
-  border: 1px dashed red;
+  /*border: 1px dashed red;*/
   line-height:70%;/*влияет на высоту элемента*/
   color: black;
   font-weight: bold;
