--- a/src/components/Legend/Legend.css
+++ b/src/components/Legend/Legend.css
@@ -1,7 +1,7 @@
 .legend {
   display: table;/*оборачивает юлок по ширене контента*/
   position: relative;
-  top: -100%;
+  top: -300px;
   left: 3px;
   /*border: 1px dashed red;*/
   line-height:70%;/*влияет на высоту элемента*/
