--- a/src/pages/Trands/Trands.css
+++ b/src/pages/Trands/Trands.css
@@ -1,7 +1,7 @@
 .Trands_flex {
   display: flex;          /**/
-  flex-direction: column; /**/
-  height: 100vh;          /**/
+  flex-direction: column; /*вертикальное расположение юлоков в контейнере*/
+  height: 100vh;          /*вся фзическая высота окна (% -не работают!)*/
 }
 
 .Trands.wrapper {
@@ -10,7 +10,8 @@
   flex-direction: column;
   align-items: flex-start;
   box-sizing: border-box;
-  height: 100%;
+  /*height: 100%; при установке flex-grow можно не ставить 100% width или height
+                  элемент сам автоматически займёт пространство указанное в flex-grow*/
   overflow: hidden;
 }
 
