--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+body::-webkit-scrollbar {
+  width: 3vw;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #7775;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #5555;
+}
+
+body::-webkit-scrollbar-track:hover {
+  background-color: #555;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
