--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,21 @@
-body::-webkit-scrollbar {
+/*https://xn----7sbbaqhlkm9ah9aiq.net/news-new/prokrutka-sodergimogo-tablitsi.html*/
+::-webkit-scrollbar {
   width: 3vw;
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: #7775;
 }
 
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background-color: #777;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: #5555;
 }
 
-body::-webkit-scrollbar-track:hover {
+::-webkit-scrollbar-track:hover {
   background-color: #555;
 }
 
